<resources>
    <string name="app_name">MyLab2</string>
    <string name="Fontstyle">Style for the font</string>
    <string name="Setsthefontstyle">Sets the style for a font</string>
    <string-array name="text_style">
        <item>Small</item>
        <item>Normal</item>
        <item>Large</item>
    </string-array>
    <string name="Chooseafontstyle">Choose a style for the font</string>
    <string name="chooseLang">Choose Language</string>
    <string name="Languageintheapp">Language in the app</string>
    <string name="lang">Language</string>
    <string name="nightTheme">Night theme</string>
    <string name="Turnon">Enable</string>
    <string name="Turnoff">Turn of</string>
    <string name="delete">Delete</string>
    <string name="DeleteAll">Delete All</string>
    <string name="settings">Settings</string>
    <string name="Selectalanguage">Select language</string>
    <string-array name="font_sizes">
        <item>Small</item>
        <item>Medium</item>
        <item>Big</item>
    </string-array>

    <string-array name="font_sizes_val">
        <item>0.5</item>
        <item>1</item>
        <item>1.5</item>
    </string-array>

    <string-array name="languages">
        <item>Russian</item>
        <item>English</item>
    </string-array>

    <string-array name="languages_val">
        <item>ru</item>
        <item>en</item>
    </string-array>
    <string name="start">Start</string>
    <string name="timerName">Timer name</string>
    <string name="edit">Edit</string>
    <string name="reset">Reset</string>
    <string name="createCopy">Copy</string>
    <string name="сhooseСolor">Edit color</string>
    <string name="font">Font</string>
    <string name="chooseFont">Edit font</string>
    <string name="theme">Theme</string>
    <string name="timerEnd">Timer end!</string>
    <string name="actionEnd">completed!</string>
    <string name="resetTimers">Reset</string>
    <string name="name">Name</string>
    <string name="actionName">Action name</string>
    <string name="add">Add</string>
    <string name="play">Play</string>
    <string name="timerColor">Timer color</string>
    <string name="deleteAllActions">Delete all!</string>
</resources>